--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 
 <div class="jumbotron">
     <h1>Ping Pong<h1>
-			<p class="lead">{{ variable  }}</p>
+			<p class="lead"></p>
 </div>
 
 {% endblock %}
